# SnapBot

./: README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
snapbot/core/: main.py
snapbot/core/cogs/: afk.py  avatar.py  colors.py  confess.py  define.py  errors.py  events.py  prefix.py  report.py  say_as.py
snapbot/core/shared/: constants.py  emojis.py
snapbot/core/shared/handlers/: __init__.py  config.py  database.py  encryption.py
snapbot/core/shared/modals/: report.py
snapbot/data/: config.toml
